--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -979,161 +979,92 @@
             $("#adresse-modal input[name='numero'], #adresse-modal input[name='complement']").val("").attr("disabled", true).blur();
         });
 
-        // Détection du changement de classe de la modal pour affichage de la cartographie
-        var searchClass = 'fase in';
+        $('#adresse-modal').on('shown.bs.modal', function () {
+            if($('#adresse-modal .modal-body').scrollTop() !== 0) {
+                $('#adresse-modal .modal-body').scrollTop(0);
+            }
 
-        var observer = new MutationObserver(
-            function (mutations) {
-                var oldClass;
-                mutations.forEach(function (mutation) {
-                    var currentClass = mutation.target.className;
-                    if(mutation.attributeName === 'class') {
-                        if(currentClass.indexOf(searchClass) >= 0) {
-                            // Si une carto est déjà présente, on n'en charge pas une autre
-                            if($('#geoportail-container .ol-viewport').length == 0) {
-                                /***** Carte IGN *****/
-                                <?php if($this->key_ign != null): ?>
-                                    viewer = Gp.Map.load(
-                                         "geoportail-container", // identifiant du conteneur HTML
-                                         {                 
-                                         apiKey : '<?php echo $this->key_ign ?>',
-                                         // chargement de la cartographie en 2D
-                                         viewMode : "2d",
-                                         // niveau de zoom de la carte (de 1 à 21)
-                                         zoom : 16,
-                                         // centrage de la carte
-                                         center : {
-                                             x : <?php echo $this->default_lon ?>,
-                                             y : <?php echo $this->default_lat ?>,
-                                             projection : "EPSG:4326"                     
-                                         },
-                                         layersOptions : {
-                                            // COUCHE DE BASE
-                                            "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD" : {},
-                                            "ORTHOIMAGERY.ORTHOPHOTOS" : {},
-                                            // Autres couches à afficher rajoutées par l'utilisateur
-                                            <?php foreach($this->couches_cartographiques as $couche_cartographique) : ?>
-                                                <?php if ($couche_cartographique['URL_COUCHECARTO'] != null) : ?>
-                                                    <?php if ($couche_cartographique['TYPE_COUCHECARTO'] == 'WMS') : ?>
-                                                        "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>" : {
-                                                                title : "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>",
-                                                                format : "<?php echo $couche_cartographique['TYPE_COUCHECARTO'] ?>",
-                                                                url : "<?php echo str_replace("{key}",$this->key_ign,$couche_cartographique['URL_COUCHECARTO']) ?>",
-                                                                layers : ["<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>"],
-                                                                outputFormat : "<?php echo $couche_cartographique['FORMAT_COUCHECARTO'] ?>",
-                                                                tiled : true,
-                                                                visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>,
-                                                                queryable : true,
-                                                                },
-                                                    <?php elseif ($couche_cartographique['TYPE_COUCHECARTO'] == 'WFS') : ?>
-                                                        "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>" : {
-                                                                title : "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>",
-                                                                format : "<?php echo $couche_cartographique['TYPE_COUCHECARTO'] ?>",
-                                                                url : "<?php echo str_replace("{key}",$this->key_ign,$couche_cartographique['URL_COUCHECARTO']) ?>",
-                                                                typeNames : "<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>",
-                                                                visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>,
-                                                                queryable : true,
-                                                                },
-                                                    <?php endif ?>
-                                                <?php else : ?>
-                                                    "<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>" : {
-                                                        visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>
-                                                        },
-                                                <?php endif ?>
-                                            <?php endforeach ?>
-                                            },
-                                            // Outils additionnels à proposer sur la carte
-                                            controlsOptions : {
-                                                "layerSwitcher" : {},
-                                                "search" : {},
-                                                "orientation" : {},
-                                                "graphicscale" : {},
-                                                //"mouseposition" : {},
-                                                "graticule" : {},
-                                                "getfeatureinfo" : {
-                                                    layers : [
-                                                        {                                    
-                                                            "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD" : {},
-                                                            "ORTHOIMAGERY.ORTHOPHOTOS" : {},
-                                                        }
-                                                    ],
-                                                    options : {
-                                                    auto : true,
-                                                    active: true,
-                                                    defaultInfoFormat: "text/html",
-                                                    defaultEvent: "singleclick",
-                                                    cursorStyle: "pointer",
-                                                    },
-                                                },
-                                            },
-                                            // Appel de la fonction après le chargement de la carte
-                                            mapEventsOptions : {
-                                                "mapLoaded" : afterInitMap,
-                                                "located" : afterPositionLocated
-                                            }
-                                        });
-                                        // Ajout du bouton FullScreen sur la carte
-                                        function afterInitMap () {
-                                            var fsControl = new ol.control.FullScreen({});
-                                            viewer.getLibMap().addControl(fsControl);
-                                            nbCouches = viewer.getLibMap().getLayers().getLength();
-                                            var lonlat = new ol.proj.transform([viewer.getCenter().x, viewer.getCenter().y],'EPSG:3857', 'EPSG:4326');
-                                            $("input[name='lon']").val(lonlat[0]);
-                                            $("input[name='lat']").val(lonlat[1]);
-                                            putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
-                                        };
-                                        function afterPositionLocated () {
-                                            $("span.result").text("Géolocalisée IGN");
-                                            // Conversion des coordonnées de la projection EPSG:3857 vers la projection EPSG:4326 pour le stockage en base  
-                                            var lonlat = new ol.proj.transform([viewer.getCenter().x, viewer.getCenter().y],'EPSG:3857', 'EPSG:4326');
-                                            $("input[name='lon']").val(lonlat[0]);
-                                            $("input[name='lat']").val(lonlat[1]);
-                                            putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
-                                        };
-                                        viewer.getLibMap().on('singleclick', function(evt) {      
-                                            // Changement des coordonnées et du marker
-                                            var lonlat = ol.proj.transform(evt.coordinate, 'EPSG:3857', 'EPSG:4326');
-                                            $("input[name='lon']").val(lonlat[0]);
-                                            $("input[name='lat']").val(lonlat[1]);
-                                            putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
-                                        });                                        
+            $('#adresse-modal input').val('');
+            $("#adresse-modal input[name='voie_ac'], #adresse-modal input[name='numero'], #adresse-modal input[name='complement']").val("").attr("disabled", true).blur();
+            $("span.result").text("Inconnu");            
+            $('#geoportail-container').css('visibility', 'hidden');
 
-                                    $('#adresse-modal #geolocme').click(function(e) {
-                                        e.preventDefault();
-                                        var adresse = "";
-                                        var numero = $("input[name='numero']").val().trim();
-                                        var voie = $("input[name='voie_ac']").val().trim();
-                                        var codepostal = $("input[name='code_postal']").val();
-                                        var commune = $("input[name='commune_ac']").val().replace(/\(.*\)/g, '');
-                                        if (!commune) {
-                                            $("span.result").text("Pas de commune renseignée");
-                                            return false;
-                                        }
-                                        if (!voie) {
-                                            $("span.result").text("Pas de voie renseignée");
-                                            return false;
-                                        }
-                                        if (numero) {
-                                            adresse += numero + ", ";
-                                        }
-                                        adresse += voie + ", " + codepostal +  ", " + commune;
-                                        $("span.result").text("Géolocalisation en cours...");
+            // Si une carto est déjà présente, on n'en charge pas une autre
+            if($('#geoportail-container .ol-viewport').length == 0) { 
+                // On empêche le clic sur la géolocalisation jusqu'à ce que la carto soit chargée
+                $('#adresse-modal #geolocme').attr('disabled', true);
+                $('#adresse-modal #geolocme_nominatim').attr('disabled', true);
+                /***** Carte IGN *****/
+                <?php if($this->key_ign != null): ?>
+                    viewer = initViewer('geoportail-container',
+                                        '<?php echo $this->key_ign ?>',
+                                        [<?php echo $this->default_lon ?>, <?php echo $this->default_lat ?>],
+                                        '<b>Centre par défaut</b>');
 
-                                        viewer.setCenter({location : adresse});
+                    viewer.listen('mapLoaded', afterInitMap);
+                    viewer.listen('located', afterPositionLocated);
+                    viewer.listen('azimuthChanged', onRotation);                    
+                    function afterInitMap () {
+                        // Ajout du bouton FullScreen sur la carte
+                        var fsControl = new ol.control.FullScreen({});
+                        viewer.getLibMap().addControl(fsControl);
 
-                                        return false;
-                                    });
-                                <?php endif ?>
-                            }
+                        // Ajout des couches utilisateur
+                        viewer = addUserLayers(viewer,
+                                               '<?php echo $this->key_ign ?>',
+                                               <?php echo json_encode($this->couches_cartographiques) ?>);
+                        nbCouches = viewer.getLibMap().getLayers().getLength();
+
+                        // On enlève le marker par défaut, les outils de mesures, et le reset d'orientation
+                        $('.ol-overlay-container').css('display', 'none');
+                        $('div[id^=GPtoolbox-measure-main-]').css('display', 'none');
+                        $('.ol-rotate').css('visibilty', 'hidden');
+
+                        $('#adresse-modal #geolocme').removeAttr('disabled');
+                        $('#adresse-modal #geolocme_nominatim').removeAttr('disabled');
+                    };
+                    function afterPositionLocated () {
+                        $("span.result").text("Géolocalisée IGN");
+                        $('#geoportail-container').css('visibility', 'visible');
+                        // Changement des coordonnées et du marker 
+                        lonlat = updateCoordinates([viewer.getCenter().x, viewer.getCenter().y], 'EPSG:3857', 'EPSG:4326');
+                        putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
+                    };
+                    function onRotation () {
+                        viewer.getAzimuth() === 0 ? $('.ol-rotate').css('display', 'none') : $('.ol-rotate').css('display', 'block');
+                    };
+                    viewer.getLibMap().on('singleclick', function(evt) {
+                        lonlat = updateCoordinates(evt.coordinate, 'EPSG:3857', 'EPSG:4326');
+                        putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
+                    });
+
+                    $('#adresse-modal #geolocme').click(function(e) {
+                        e.preventDefault();
+                        var adresse = "";
+                        var numero = $("input[name='numero']").val().trim();
+                        var voie = $("input[name='voie_ac']").val().trim();
+                        var codepostal = $("input[name='code_postal']").val();
+                        var commune = $("input[name='commune_ac']").val().replace(/\(.*\)/g, '');
+                        if (!commune) {
+                            $("span.result").text("Pas de commune renseignée");
+                            return false;
                         }
-                    }
-                });
-            });
+                        if (!voie) {
+                            $("span.result").text("Pas de voie renseignée");
+                            return false;
+                        }
+                        if (numero) {
+                            adresse += numero + ", ";
+                        }
+                        adresse += voie + ", " + codepostal +  ", " + commune;
+                        $("span.result").text("Géolocalisation en cours...");
+                        viewer.setCenter({location : adresse});
 
-        var $checkLoadedModal = $('#adresse-modal');
-        observer.observe($checkLoadedModal[0], {
-            attributes: true
-        });        
+                        return false;
+                    });
+                <?php endif ?>
+            }
+        });
         
         <?php if( $this->geoconcept_url != null): ?>
                 
