--- a/application/views/scripts/etablissement/index.phtml
+++ b/application/views/scripts/etablissement/index.phtml
@@ -296,6 +296,7 @@
                     <script src="/js/sdk-ol/GpSDK3D.js"></script>
                     <link rel="stylesheet" href="/js/sdk-ol/GpSDK3D.css" />
                     <!-- FIN SDK -->
+                    <script src="/js/main.js"></script>
                     <!-- Déplacement du bouton FullScreen (sinon supperposé avec le gestionnaire de couches)
                     et du panel Profil Altimétrique (sinon coupé en 2) -->
                     <style>
@@ -303,96 +304,31 @@
                     div[id^=GPelevationPathPanel-] {top:-75px;}
                     </style>
                     <script type="text/javascript">
-                        viewer = Gp.Map.load("geoportail-container", {
-                             apiKey : '<?php echo $this->key_ign ?>',
-                             // chargement de la cartographie en 2D
-                             viewMode : "2d",
-                             // niveau de zoom de la carte (de 1 à 21)
-                            zoom : 16,
-                            center : {
-                                x : <?php echo $this->etablissement['adresses'][0]['LON_ETABLISSEMENTADRESSE'] ?>,
-                                y : <?php echo $this->etablissement['adresses'][0]['LAT_ETABLISSEMENTADRESSE'] ?>,
-                                projection : "EPSG:4326"
-                            },                       
-                            layersOptions : {                                
-                                // COUCHE DE BASE
-                                "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD" : {},
-                                "ORTHOIMAGERY.ORTHOPHOTOS" : {},
-                                // Autres couches à afficher rajoutées par l'utilisateur
-                                <?php foreach($this->couches_cartographiques as $couche_cartographique) : ?>
-                                    <?php if ($couche_cartographique['URL_COUCHECARTO'] != null) : ?>
-                                        <?php if ($couche_cartographique['TYPE_COUCHECARTO'] == 'WMS') : ?>
-                                            "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>" : {
-                                                    title : "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>",
-                                                    format : "<?php echo $couche_cartographique['TYPE_COUCHECARTO'] ?>",
-                                                    url : "<?php echo str_replace("{key}",$this->key_ign,$couche_cartographique['URL_COUCHECARTO']) ?>",
-                                                    layers : ["<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>"],
-                                                    outputFormat : "<?php echo $couche_cartographique['FORMAT_COUCHECARTO'] ?>",
-                                                    tiled : true,
-                                                    visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>,
-                                                    queryable : true,
-                                                    },
-                                        <?php elseif ($couche_cartographique['TYPE_COUCHECARTO'] == 'WFS') : ?>
-                                            "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>" : {
-                                                    title : "<?php echo $couche_cartographique['NOM_COUCHECARTO'] ?>",
-                                                    format : "<?php echo $couche_cartographique['TYPE_COUCHECARTO'] ?>",
-                                                    url : "<?php echo str_replace("{key}",$this->key_ign,$couche_cartographique['URL_COUCHECARTO']) ?>",
-                                                    typeNames : "<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>",
-                                                    visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>,
-                                                    queryable : true,
-                                                    },
-                                        <?php endif ?>
-                                    <?php else : ?>
-                                        "<?php echo $couche_cartographique['LAYERS_COUCHECARTO'] ?>" : {
-                                        visibility : <?php if ($couche_cartographique['TRANSPARENT_COUCHECARTO'] == 0) : ?>false<?php else : ?>true<?php endif ?>
-                                        },
-                                    <?php endif ?>
-                                <?php endforeach ?>
-                                },
-                                // Outils additionnels à proposer sur la carte
-                                controlsOptions : {
-                                    "layerSwitcher" : {},
-                                    "search" : {},
-                                    "orientation" : {},
-                                    "graphicscale" : {},
-                                    //"mouseposition" : {},
-                                    "graticule" : {},
-                                    "length" : {},
-                                    "area" : {},
-                                    "azimuth" : {},
-                                    //"elevationpath" : {},
-                                    "getfeatureinfo" : {
-                                        layers : [
-                                            {
-                                                "GEOGRAPHICALGRIDSYSTEMS.MAPS.SCAN-EXPRESS.STANDARD" : {},
-                                                "ORTHOIMAGERY.ORTHOPHOTOS" : {},
-                                            }
-                                        ],
-                                        options : {
-                                        auto : true,
-                                        active: true,
-                                        defaultInfoFormat: "text/html",
-                                        defaultEvent: "singleclick",
-                                        cursorStyle: "pointer",
-                                        },
-                                    },
-                                },
-                                // Repères visuels
-                                markersOptions : [{
-                                    content : "<b><?php echo $this->etablissement['informations']['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?></b><br/>"+
-                                    "<?php echo $this->etablissement['adresses'][0]['NUMERO_ADRESSE'] ?>, <?php echo $this->etablissement['adresses'][0]['LIBELLE_RUE'] ?><br/>"+
-                                    "<?php echo $this->etablissement['adresses'][0]['CODEPOSTAL_COMMUNE'] ?> <?php echo $this->etablissement['adresses'][0]['LIBELLE_COMMUNE'] ?><br/>"
-                                }],
-                                // Appel de la fonction après le chargement de la carte
-                                mapEventsOptions : {
-                                    "mapLoaded" : afterInitMap
-                                }
-                            });
-                            //
-                            function afterInitMap () {
-                                var fsControl = new ol.control.FullScreen({});
-                                viewer.getLibMap().addControl(fsControl);
-                            };
+                        viewer = initViewer('geoportail-container',
+                                            '<?php echo $this->key_ign ?>',
+                                            [<?php echo $this->etablissement['adresses'][0]['LON_ETABLISSEMENTADRESSE'] ?>,
+                                             <?php echo $this->etablissement['adresses'][0]['LAT_ETABLISSEMENTADRESSE'] ?>],
+                                            "<b><?php echo $this->etablissement['informations']['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?></b><br/>"+
+                                                "<?php echo $this->etablissement['adresses'][0]['NUMERO_ADRESSE'] ?>, "
+                                                +"<?php echo $this->etablissement['adresses'][0]['LIBELLE_RUE'] ?><br/>"+
+                                                "<?php echo $this->etablissement['adresses'][0]['CODEPOSTAL_COMMUNE'] ?> "+ 
+                                                "<?php echo $this->etablissement['adresses'][0]['LIBELLE_COMMUNE'] ?>");
+                            
+                        viewer.listen('mapLoaded', afterInitMap);
+                        viewer.listen('azimuthChanged', onRotation);
+                        function afterInitMap () {
+                            // Ajout du bouton FullScreen sur la carte
+                            var fsControl = new ol.control.FullScreen({});
+                            viewer.getLibMap().addControl(fsControl);
+
+                            viewer = addUserLayers(viewer,
+                                                   '<?php echo $this->key_ign ?>',
+                                                   <?php echo json_encode($this->couches_cartographiques) ?>);
+                            $('.ol-rotate').css('display', 'none');
+                        };
+                        function onRotation () {
+                            viewer.getAzimuth() === 0 ? $('.ol-rotate').css('display', 'none') : $('.ol-rotate').css('display', 'block');
+                        };
                         </script>
                     </div>
                 <?php endif ?>
