--- a/application/views/scripts/couches-cartographiques/list.phtml
+++ b/application/views/scripts/couches-cartographiques/list.phtml
@@ -13,10 +13,18 @@
     div[id^=GPelevationPathPanel-] {top:-75px;}
     </style>
     <script type="text/javascript">
+
+        <?php
+            $public_dir = $_SERVER['DOCUMENT_ROOT'];
+            $autoconf_path = getenv('PREVARISC_IGN_AUTOCONF');
+            $autoconf_path = file_exists($public_dir.$autoconf_path) ? $autoconf_path : "";
+        ?>
+
         viewer = initViewer('geoportail-container',
                             '<?php echo $this->key_ign ?>',
                             [<?php echo $this->default_lon ?>, <?php echo $this->default_lat ?>],
-                            "<b>Centre par défaut</b>");
+                            "<b>Centre par défaut</b>",
+                            '<?php echo $autoconf_path ?>');
 
         viewer.listen('mapLoaded', afterInitMap);
         viewer.listen('azimuthChanged', onRotation);            
