FIX #4199 - Correction de certains cas non pris en compte au niveau du lien entre l'avis des dossiers et l'avis de l'établissement / Correction de certains tags js

--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1059,9 +1059,9 @@
             return false;
         }
         
-        if($("[name='dateDocManquant[]'").val() == '') {
-            $("[name='dateDocManquant[]'").focus();
-            $("[name='dateDocManquant[]'").css("border-color","red");
+        if($("#dateDocManquant_1").val() == '') {
+            $("#dateDocManquant_1").focus();
+            $("#dateDocManquant_1").css("border-color","red");
             return false;
         }
 
