--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -1245,7 +1245,7 @@
         $('input[name=EFFECTIFHABITATION_ETABLISSEMENTINFORMATIONS], input[name=EFFECTIFCARAVANE__ETABLISSEMENTINFORMATIONS], input[name=EFFECTIFEMPLACEMENTNU_ETABLISSEMENTINFORMATIONS], input[name=EFFECTIFDIVERS_ETABLISSEMENTINFORMATIONS]').on('keydown keyup', function() {
             setTotalEmplacementCamping();
         });        
-        $('input[name=EFFECTIFTOTALCAMPING_ETABLISSEMENTINFORMATIONS').val(setTotalEmplacementCamping());
+        $('input[name=EFFECTIFTOTALCAMPING_ETABLISSEMENTINFORMATIONS]').val(setTotalEmplacementCamping());
         
     });
             
