Correction d'une typo sur une alerte

--- a/application/views/scripts/dossier/rapport.phtml
+++ b/application/views/scripts/dossier/rapport.phtml
@@ -137,7 +137,7 @@
         <hr class='clear'/>
     </div>
     <div class="alert alert-warning" id='alertDiv' style='display:none;'>
-        <strong>Attention!</strong> Vous devez selectionner un fichier et au moin un établissement.
+        <strong>Attention!</strong> Vous devez selectionner un fichier et au moins un établissement.
     </div>
     <div class="alert alert-success" id='successDiv' style='display:none;'></div>
     <div class="alert alert-danger" id='failDiv' style='display:none;'></div>
