--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -1,21 +1,15 @@
 <!doctype html>
 <html lang="fr" >
-
     <head>
-
         <style>body { padding-top: 80px; }</style>
         <?php echo $this->render("includes/header.phtml"); ?>
-
     </head>
 
     <body>
-
         <?php echo $this->render("includes/nav-main.phtml"); ?>
 
         <div class='container-fluid' >
-
             <div class='row-fluid page-header' style="margin-top: 55px">
-
                 <div class='span12'>
                     <h2 style="margin: 4px 0">
                       <?php echo $this->avatar(Zend_Auth::getInstance()->getIdentity()['ID_UTILISATEUR'], 'medium', array('style' => "float: left; width: 50px; border: 1px solid #dfdfdf; border-radius: 50%; margin-right: 15px; margin-top: 14px;")) ?>
@@ -27,28 +21,19 @@
                         <a class="deconnexion" href="<?php echo $this->url(array('controller' => 'session', 'action' => 'logout'), null, true) ?>">Déconnexion</a>
                     </span>
                     <a id="reinitBlocOrder" class="btn btn-small pull-right" href="#">
-                        <i class="icon-th"></i> Ré-initialiser les blocs
+                        <em class="icon-th"></em> Ré-initialiser les blocs
                     </a>
                 </div>
-
             </div>
 
              <div class='row-fluid'>
-
                 <div class='span12'>
-
                     <?php echo $this->render("includes/notifications.phtml"); ?>
-
                     <?php echo $this->layout()->content; ?>
-
                 </div>
-
             </div>
 
             <?php echo $this->render("includes/footer.phtml"); ?>
-
         </div>
-
     </body>
-
 </html>
