--- a/application/layouts/search.phtml
+++ b/application/layouts/search.phtml
@@ -1,10 +1,10 @@
 <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation' ?>
 <?php $action_name = Zend_Controller_Front::getInstance()->getRequest()->getActionName() ?>
 <ul class="nav nav-tabs nav-stacked menu_dashboard" >
-    <li class="<?php echo $action_name == 'etablissement' ? 'active' : '' ?>"><a href='/search/etablissement?label=&page=1'><i class="icon-home icon-black"></i>   Établissements</a></li>
-    <li class="<?php echo $action_name == 'dossier' ? 'active' : '' ?>"><a href='/search/dossier?objet=&page=1'><i class="icon-folder-open icon-black"></i>   Dossiers</a></li>
-    <li><a href='../etablissement/add'><i class="icon-plus"></i> Ajouter un établissement</a></li>
-    <li><a href='../dossier/add'><i class="icon-plus"></i> Ajouter un dossier</a></li>
+    <li class="<?php echo $action_name == 'etablissement' ? 'active' : '' ?>"><a href='/search/etablissement?label=&page=1'><em class="icon-home icon-black"></em>   Établissements</a></li>
+    <li class="<?php echo $action_name == 'dossier' ? 'active' : '' ?>"><a href='/search/dossier?objet=&page=1'><em class="icon-folder-open icon-black"></em>   Dossiers</a></li>
+    <li><a href='../etablissement/add'><em class="icon-plus"></em> Ajouter un établissement</a></li>
+    <li><a href='../dossier/add'><em class="icon-plus"></em> Ajouter un dossier</a></li>
 </ul>
 <?php $this->placeholder('lateral_navigation')->captureEnd(); ?>
 
