--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -949,6 +949,15 @@
 						case '2':
 							docurbaVal = "AT";
 						break;
+						case '62':
+							docurbaVal = "CU";
+						break;
+						case '30':
+							docurbaVal = "DP";
+						break;
+						case '14':
+							docurbaVal = "PA";
+						break;
 					}
 					$("#docurbaVal").prepend(docurbaVal);
 				}else{
